--- a/react-supabase/package.json
+++ b/react-supabase/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
-    "antd": "^5.24.8",
+    "antd": "^5.24.9",
     "bootstrap": "^5.3.5",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.1",
